--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
 		"gulp-imagemin": "^7.1.0",
 		"gulp-newer": "^1.4.0",
 		"gulp-rename": "^2.0.0",
-		"gulp-sass": "^4.0.2",
-		"gulp-sass-glob": "^1.1.0",
-		"gulp-scss": "^1.4.0",
 		"gulp-svg-sprite": "^1.5.0",
 		"gulp-uglify-es": "^2.0.0",
 		"hammerjs": "^2.0.8",
@@ -37,9 +34,10 @@
 	"dependencies": {
 		"bootstrap": "^4.4.1",
 		"flatpickr": "^4.6.13",
+		"gulp-sass": "^5.1.0",
 		"jsmediatags": "^3.9.7",
 		"musicmetadata": "^2.0.5",
-		"node-sass": "^4.14.1",
-		"quill": "^1.3.7"
+		"quill": "^1.3.7",
+		"sass": "^1.54.2"
 	}
 }
